updated project card styling, fixed contacts page overlap issue

--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -54,6 +54,9 @@
 -webkit-box-shadow: 0x 0px 20px 3px rgba(0,255,255,0.7);
 -moz-box-shadow: 0px 0px 20px 3px rgba(0,255,255,0.7);
 transform: scalex(1);
+border-style: solid;
+border-width: 1px;
+border-color: #00FFFF;
   
 }
 
