--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -10,8 +10,10 @@
 
 
   #container {
+    margin-top: 50px;
     width: 70vw;
-    height: 70vh;
+    min-height: 100vh;
+    /* height: 70vh; */
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -24,6 +26,7 @@
     grid-template-rows: 1fr;
     justify-content: center;
     align-items: center; */
+
 
   }
 
@@ -58,21 +61,24 @@
     flex-direction: row;
     align-items: center;
     height: 30px;
-
+    padding-top: 10px;
 
   }
 
   .titleContainer > * {
+    margin: 0;
     margin-left: 10px;
 
   }
 
   .title {
-    transition: 300ms ease-in-out;
-    position: relative;
+    /* transition: 300ms ease-in-out;
+    position: relative; */
     color: #00FFFF;
     font-style: oblique;
     font-weight: 500;
+    font-size: larger;
+
 
   }
 
@@ -85,6 +91,7 @@
 
   .description {
     margin-left: 10px;
+    color: rgb(210, 210, 210);
 
   }
 
